<resources>
    <string name="app_name">DialogFragmentDemo</string>
    <string name="next">Next</string>
    <string name="hello">Hello</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="detail">Detail</string>
    <string name="add_fragment">Add Fragment</string>
    <string name="detail_fragment">Detail Fragment</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="menu">Menu</string>
    <string name="dialog">Dialog</string>
    <string name="single_dialog">Single Dialog</string>
    <string name="multi_dialog">Multi Dialog</string>
    <string name="thong_bao">Thông báo</string>
    <string name="lua_chon">Lựa chọn:</string>
</resources>